radix-transactions/tests/assets/manifest_parser_error_unexpected_token_7.diag
error: expected a manifest SBOR value kind, found '1u8'
  |
3 |     "lock_fee"
4 | ;
5 | CALL_METHOD
6 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
7 |     "some_method"
8 |     Array<1u8>()
  |           ^^^ expected a manifest SBOR value kind
9 | ;
  |